working on book record

--- a/book_records/resonance.tex
+++ b/book_records/resonance.tex
@@ -2,12 +2,252 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[english]{babel}
 \usepackage{url}
+\usepackage{csquotes}
 
 \begin{document}
 
 \title{On Resonance}
 \maketitle
-\section{The Molecule of More}
-\subsection{Introduction}
+\section{The Role of Resonance in Performance Excellence and Life Engagement}
+
+This article presents a concept underlying excellence called \textit{resonance},
+which was developed based on research interviews and consulting practice with high-level performers from all walks of life.
+Findings suggest that many high-caliber performers follow a typical process as they become experts in their chosen field.
+They have a dream, which represents how they want to feel in their daily pursuits.
+They also engage in extensive preparation, which includes activities that enable them to live their dream.
+All of the participants faced obstacles, but they developed strategies to revisit their dream before they actually engaged in more preparation.
+This cyclical process that guided their performance and life has been termed \textit{reosonance}, 
+which occurs when there is a seamless fit between their internal self and their external environment.
+It is captured in the resonance performance model (RPM), a heuristic model devised to guide the practice of consultants.
+This article also includes a discussion of the RPM in relation to other performance-related concepts such as flow, presents some recent and future research with resonance, and 
+considers practical application for consultants who may be interested in using the RPM.
+
+\begin{displayquote}
+    The best performances are always when a performer can free himself from the impossible conception of providing a perfect performance and instead unabashedly knocks down these walls
+    and \textbf{fearlessly expresses himself}.
+\end{displayquote}
+
+What does it mean to perform? Is there a process of engagement that underlies outstanding performance, whether it be working, strength training, shooting a basketball, or performing emergency triple bypass surgery?
+How do people become excellent performers? If people's performances are engaging, will they perform better? What role does personal meaning play in the process of engagement?
+
+These are the questions in which we are interested and we believe to be relevant to a special issue on performance excellence.
+We will explore some possible answers in this article by presenting a concept called \textit{resonance}.
+
+First, we will explain resonance, its origins, and its relations to engagement and performance excellence.
+Second, we will discuss possible links between resonance and other performance-relevant concepts, such as emotions, flow, and intrinsic motivation.
+Third, we will present recent research on resonance as well as possibilities for future studies.
+Finally, we will discuss how resonance has been and can be used to help individual from a variety of life contexts engage in high-quality performance and live a meaningful life in the process.
+
+\section{Resonance Overview}
+\subsection{Rationale for Resonance}
+This section will focus on a few of our assumptions about performance and why resonance is relevant to performance in any life arena.
+We consider resonance to be a work in progress, as it developed out of consulting practice and research interview conducted by the lead author.
+That work indicated that resonance is a process that can help people perform better and live more fulfilling lives.
+
+Helping people find meaning and engagement in whatever they do is one key to helping them perform well and achieve their potential.
+These assumptions about people, resonance, and performance are consistent with findings in the emerging field of positive psychology.
+As Seligman and Csikszentmihalyi pointed out, ``Psychology has become a science largely about healing. It concentrates on repairing damage within a disease model of human functioning.''
+It is no surprise, then, that 46,000 papers have been published on depression, whereas only 400 have appeared on joy.
+
+Sport pyschology certainly has been influenced by its parent discipline, thus several interventions in the past have focused on treatment in the attempt to help clients cope with anxiety or other mental and emotional inadequacies.
+Although these treatment-based interventions have their place in performance enhancement, they are grounded in pathology or use more of a repair approach that lacks many of the positive features of being human.
+
+Is it purely a coincidence that so few people live healthy lives when they are constantly told or reminded to fix so much of what is wrong with them, instead of finding and building on what is right?
+Our field definitely could make an added contribution by widening its focus on areas relating to the positive subjective experience of living and determining how that concept connects to meaningful performance,
+and ultimately, performance excellence.
+
+The lead author's research interviews as well as the work of well-known authors such as Csikzentmihalyi have shown that 
+\begin{enumerate}
+    \item engagement in an activity leads to enhanced performance,
+    \item engagement can be designed into people's performances and lives,
+    \item \textbf{engagement occurs when people express themselves authentically through their chosen activity},
+    \item engagement leads to the creation of sustainable energy in the pursuit of goals.
+\end{enumerate}
+According to those who participated in Newburg's interviews, performance excellence was the byproduct of living their life in such a way that they 
+fully engaged in what hey did to experience resonance. The concept of resonance if further described next.
+
+\subsection{The Origins of Resonance}
+The focus of Newburg's work has been to understand why people perform and why some of them
+\textbf{are willing to create and express their own ideas in the face of many life obstacles}.
+He was interested in exploring how people find meaning in their performances and their lives and why they choose to take risks to perform at a high level.
+
+Newburg selected the performers based on not only their remarkable achievements and careers but also their satisfaction with life.
+During the interviews, the participants told their stories. As the information emerged, it was remarkable how they emphasized that they molded their lives and careers based on
+\textbf{how they felt in the moment of action}. 
+This is the main reason why \textbf{feelings are at the core of resonance}.
+
+Their stories revealed that most of them followed a typical process as they became experts in their chosen field. 
+They had a dream, which represented \textbf{how they wanted to feel in their daily pursuits}.
+They also engaged in extensive preparation, which includes activities that enabled them to live their dream.
+To overcome obstacles, they developed strategies to \textbf{revisit their dream before they actually engaged in more preparation}.
+This cyclical process that guided their performance and life was termed resonance.
+
+Despite their varied backgrounds, these stellar performers from all walks of life faced similar issues. 
+Their performance was based on the \textbf{creation and expression of an idea}.
+The performers revealed that they had at least one idea that captured them so intensely that they committed to make the expression of this idea
+their life's work.
+\textbf{This idea thus became a dream}. Excellent performance and meaningful living occurred when they committed to \textbf{living their dream for much of their waking hours}.
+To them, \textbf{performance excellence was a byproduct of engaging themselves on a regular basis}.
+The cyclical process that guided their performance allowed them to experience resonance.
+
+\begin{displayquote}
+    I think what we're seeking is \textbf{an experience of being alive} so that \textbf{our life experiences on the purely physical plane
+    will have resonance with our own innermost being and reality} so that we actually feel the rapture of being alive.
+\end{displayquote}   
+
+Newburg explored this idea of resonance as it kept emerging in various ways, shapes and forms in his work. 
+Ultimately, he concluded that expert performers seek resonance-that is, \textbf{a seamless fit between how they want to feel (internal) each day and the environment (external) in which they live}.
+This allows them to connect or fully engage in what they do so that there is \textbf{a reciprocal positive influence between themselves and what surrounds them in their environment}.
+Resonance is a word that is used in the fields of music, physics and electricity and in all cases, part of its meaning refers to \textbf{increased, reinforced, and prolonged energy}.
+
+\textbf{Resonance is about moving toward a harmonious experience between one's inner world-that is, the feelings an individual wants to have-and his or her surroundings.}
+\textbf{It is enjoying the process of expanding one's self out into the world in an authentic way}.
+
+The RPM is a heuristic model that evolved from the lead author's research and consulting experiences and can be used to guide the practice of consultants.
+
+\subsection{The Resonance Performance Model}
+The RPM has four main components: dream, preparation, obstacles, and revisit the dream.
+
+\begin{itemize}
+    \item \textit{The dream} One of the unique features of the RPM is the dream component. The dream \textbf{represents the feelings that individual seek when they engage in a particular activity}.
+    It is an \textbf{internal feeling that motivates people to continue playing or performing certain activities}.
+    Newburg postulated that the dream is a central reason why people continually engage in their chosen activity, because it gives them the feelings \textbf{they have identified as expressions of who they are and what they want}.
+    Each person's dream is unique and specific to his or her performing context.
+
+    Performers who were interviewed were able to free themselves from pressure, fears, and distractions and to exercise their freedom to learn, make their own decisions, and enjoy themselves in the process.
+    Newburg found that \textbf{a lot of doubt and anxiety exist because people do not engage in activities that necessarily make them feel the way they would like to feel}.
+    \textbf{In these cases, individuals restrict themselves and how they truly would like to live their lives}. 
+
+    The actions that lead to the achievement of goals may contribute to feelings of resonance, but the actual attainment is sometimes anticlimax.
+    Dream that are lived and experienced each day are the keys to performance excellence and meaningful living. A personal dream is a way of life.
+    It leads to the experience of resonance over and over again. 
+
+    Knowing and understanding how people want to feel on a daily basis as they perform various tasks is crucial and influences all of the other components of the model.
+
+    \item \textit{Preparation} It involves all the activities in which individuals engage to make the dream happen or to elicit the feelings they desire on a consistent basis.
+    Resonating performers enjoy much of the preparation phase. This is because \textbf{they are clear on the feelings they want to experience}, and preparation is just part of the process.
+
+    Most of them discussed the preparation stage of resonance with joy and pride. It was not drudgery, nor was it something \textbf{they felt compelled to do}. Rather, it was \textbf{something fulfilling that they wanted to do}.
+    Their capacity to put in the time and effort had a real meaning to them, and it was an important part of performing.
+    \textbf{It was part of the creation and expression of their dream}.
+
+    \begin{displayquote}
+        We didn't really train. \textbf{We went out for fun two or three hours a day}.
+        \textbf{We would go out and play around for hours, and we would think up this stuff}.
+    \end{displayquote}
+
+    If the preparation is on target and in line with one's life dream, time becomes irrelevant.
+    The preparation becomes a part of the resonance one experiences when the dream for brief moments at a time, 
+    becomes a reality. Additional preparation is required to increase the glimpses of resonance that comes from momentary realizations of the dream.
+    
+    Resonance-type performers are aware that their preparation must connect with their dream.
+    Preparation is as much about developing the ability to live their dream and keep sight of it, as it is putting in the hours of work to develop the skills required to excel in their domain.
+    Holding onto their dream or the feelings that inspire them to prepare is critical. 
+    \textbf{They do not wait until a goal is reached to feel the way they want to feel. Striving for the achievement of a goal is as resonating as the goal achievement itself, if not more so}.
+
+    In sum, the preparation aspect of resonance involves developing not only the required skills to excel in a domain, but also, 
+    and perhaps more importantly, perspectives and strategies that enable individuals to experience their dream on a daily basis.
+    Considerable time, effort, energy, and \textbf{awareness} are necessary to fully engage and enjoy the preparation phase.
+
+    \item \textit{Obstacles} The third component of the RPM suggests that various obstacles often can disrupt the resonance experience.
+    All of the interviewed participants encountered obstacles at some point during their careers. 
+    These obstacles were either external-such as \textbf{rejection, losses, injuries, and even success}-or internal-such as \textbf{fear, self-doubt, and anxiety}.
+    What was remarkable about the participants is that they embraced their obstacles and viewed them as part of the performance process.
+    For the most part, they were able to avoid the ``obstacle-preparation trap''.
+
+    In his consulting practice, Newburg observed that \textbf{when faced with obstacles, many people go back to the preparation phase and attempt to work harder. They get caught going back and forth between obstacles and preparation and in this vicious duty cycle cut themselves off from their dream}.
+    \textbf{One day they realize they are no longer experiencing any of the feelings they like to have and wonder how this came to be}.
+    In the interviews, it became apparent that, more often than not they first attempted to \textbf{reconnect with the feelings that motivated them to do their chosen activity in the first place}.
+    This component of the RPM was labeled ``revisiting the dream''.
+
+    \item \textit{Revisiting the dream}. \textbf{The importance of getting back in touch with one's dream should not be underestimated}.
+    \textbf{The expression of revisiting is unique to every individual, but often it is a reflective period that occurs after an obstacle has been encountered}.
+    This can result in a \textbf{rekindled motivation to live their dream within their performance context and can prevent them from getting trapped in the obstacle-preparation loop}, which can be problematic.
+    Revisiting the dream also is important because it allows people to \textbf{reenergize themselves before setting new goals or modifying those they initially established to engage in meaningful preparation}.
+
+    Top performers reported that in revisiting their dream, they are better able to work through obstacles, derive meaningful lessons, and move into the preparation phase when ready.
+    \textbf{Revisiting the dream involves regularly and actively reminding themselves of the original feelings that captured their attention}.
+
+    In his interview, the swimmer shared that, following this disappointing event, he chose to take a long break and engage in an extensive process of soul searching.
+    He used this time to \textbf{explicitly define his dream} (i.e. easy speed) and develop strategies to revisit or remain connected to it. 
+    As he prepared for the 1996 Olympics, the swimmer changed his perspective and \textbf{chose to focus on how he wanted to feel in the water}.
+    \textbf{As he clarified his dream over the period of four years, he also developed strategies that allowed him to live it to the fullest as often as possible}.
+
+\end{itemize}
+
+In sum, \textbf{revisiting the dream is a crucial component of the performance process that is perhaps too often overlooked}.
+
+\section{Resonance and Other Performance-related Concepts}
+\subsection{Intrinsic Motivation}
+Intrinsic motivation has been defined as the \textbf{innate, organismic needs for competence and self-determination}.
+The intrinsic needs for competence and self-determination motivate an ongoing process of seeking and attempting to conquer optimal challenges.
+\textbf{Self-determination is intimately linked to the concept of autonomy}-that is, a person's sense that intentional behavior is self-regulated, flexible, and 
+\textbf{occurs when there is no pressure}. 
+
+\textbf{In contrast, the concept of control refers to intentional behavior that is perceived to be coerced by internal and environmental forces}.
+
+Resonance is very much in line with the basic tenets of intrinsic motivation, especially as it pertains to interest and engage.
+
+Intrinsic motivation concerns \textbf{active engagement with tasks that people find interesting, and that, in turn promotes growth}.
+Intrinsically motivated behaviors are those that are \textbf{freely engaged out of interest without the necessity of separable consequences, and to be maintained, 
+they require satisfaction of needs of autonomy and competence}.
+
+Individuals who engage in the process of resonance actively pursue interesting activities that allow them to live their dreams.
+Identifying the dream are in essence, identifying what motivates people to pursue their activities and what they will do to remain energized through both successes and obstacles.
+This motivation is directly linked to emotions-that is, how people want to feel as they perform their activities.
+
+\subsection{Emotions}
+\textbf{Feelings are at the core of the resonance process}. 
+The feelings that are being iterated in this article refers to \textbf{self-feelings}.
+Self-feelings represent emotions that people \textit{experience}. Self-feelings are an important part of the human experience and Denzin categorized them into four different groups:
+sensible feelings, lived feelings, intentional value feelings, and feelings of the self and the moral person.
+
+The dream, which represents how individuals want to feel on a regular basis, mostly refers to the aforementioned category of \textbf{lived feelings}.
+Lived feelings (feelings of the lived body) expresses a particular value content or meaning found in the world by the person. 
+These feelings are part of the self and reflect intentionality. 
+
+\textbf{Resonance focuses on the positive lived feelings of individuals} and assumes that most individuals
+\begin{enumerate}
+    \item have a desire to experience positive feelings,
+    \item can access these feelings with or without the help of others,
+    \item and seek and experience these feelings in unique and personalized ways.
+\end{enumerate}
+
+Can they actually easily access these feelings and if so, are they experiencing them as often as they could?
+Resonance is very much based on an interpretive/phenomenological perspective, which emphasizes that the meaning of a given feeling lies in the interpretation the individual bring to it.
+
+The crux underlying the proposed resonance approach to living and performing is that \textbf{individuals can consciously identify unique feelings they want to experience in their daily pursuits
+and place themselves in situations and environments that elicit these feelings}.
+\textbf{They also can choose to manage their feelings when faced with obstacles}.
+\textbf{Rather than focusing on their initial emotional response, which often can be negative, they can respond to their own response}.
+In other words, after a negative response, they can quickly change their reaction to a more positive and appropriate one that is in line with their dream.
+\textbf{Their initial emotional response was not the most important one}. 
+\textbf{By knowing how they wanted to feel each day and in each circumstance, they responded positively to their initial response, which gave them energy and motivation to overcome the obstacle}.
+
+This notion of \textbf{responding to one's response} can be linked to Deci's idea of \textbf{regulating one's emotions to foster autonomy within difficult situations}.
+Deci suggested that \textbf{a powerful path toward autonomy is a reappraisal process that gives people power over their emotions} rather than being pawns to them.
+
+Most people do not engage in this reappraisal process of their initial emotional reactions to an event or obstacle.
+\textbf{It is a conscious process to which people must commit}.
+
+\subsection{Flow}
+Flow has been described as a state of performance in which there is 
+\begin{enumerate}
+    \item loss of self-consciousness and feeling of control,
+    \item perceptual transformation of time,
+    \item and total absorption in the activity.
+\end{enumerate}
+
+The more often people are in flow, the happier or the more enjoyable their experiences will be.
+Resonance and flow are parallel in that they both can provide enjoyment and lead to positive affect in all types of domains.
+
+Resonance refers to a broader positive subjective experience, whereas flow pertains more to positive subjective snapshots of experiences.
+Flow may be an optimal experience, but to place oneself into a situation for flow to occur requires a high degree of commitment and energy.
+Flow is not an easy state to achieve because it demands both energy and self-confidence, often in the face of great challenges.
+
+Flow appears to occur more sporadically or spontaneously, whereas resonance is a way of living on a daily basis without necessarily investing extraordinary effort.
+Being aware of how they want to feel and having cues and reminders to fully engage in their actions may be sufficient to experience resonance.
+
+The resonance performance process may facilitate intrinsic motivation, positive emotion, and flow experiences.
 
 \end{document}
